# pipelinewise

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .style.yapf  .yapfignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.CI  Dockerfile.barebone  Dockerfile.ci  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  entrypoint-dev.sh  entrypoint.sh  exo_install.sh  genindex.html  index.html  index.xml  install.sh  motd  objects.inv  publish_docs.sh  pylintrc  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  singer.patch  sitemap.xml  tap-github.patch  (+1 more)
.circleci/: config.yml  publish_docs.sh  tap_mysql_test_db.sh  tap_postgres_test_db.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  tw-rules.yaml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  (+2 more)
_sources/: index.rst.txt
admin-console/: .stylelintrc  README.md  package-lock.json  package.json
categories/: index.xml
cli/: .coveragerc  MANIFEST.in  requirements.txt  setup.py
concept/: fastsync.html  linux_pipes.html  replication_methods.html  singer.html
config/: config.json
connectors/: taps.html  targets.html
dev-project/: .env  .env.template  Dockerfile  README.md  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  tap_mysql_mariadb.yml  tap_postgres.yml  target_postgres.yml
docs/: Makefile  README.md  conf.py  index.md  index.rst
installation_guide/: creating_pipelines.html  encrypting_passwords.html  installation.html  running_pipelines.html
js/: fresh.js
pipelinewise/: __init__.py  logger.py  logging.conf  logging_debug.conf  utils.py
pipelinewise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project/: about.html  contribution.html  licenses.html
rest-api/: manage.py  requirements.txt  rest-api.ini  setup.py  wsgi.py
scripts/: check_any_file_changed.py  ci_check_no_file_changes.sh  publish_docs.sh
singer-connectors/: README.md
tags/: index.xml
test-project/: README.md
tests/: docker-compose.yml  entrypoint.sh  test_cli.py  test_config.py  test_utils.py
user_guide/: alerts.html  cli.html  encrypting_passwords.html  fastsync.html  integration.html  logging.html  metadata_columns.html  partial_sync.html  resync.html  scaling.html  scheduling.html  schema_changes.html  transformations.html  yaml_config.html
(+1333 files in other folders)
