[tool.poetry]
name = "pipelinewise"
version = "0.20.2"
description = "PipelineWise"
classifiers = ["License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3 :: Only"]
homepage = "https://github.com/transferwise/pipelinewise"
authors = ["TransferWise"]
readme = "README.md"
include = ["pipelinewise/cli/schemas/*.json", "pipelinewise/logging.conf"]
exclude = ["tests*"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "==2.7.16"
argparse = "==1.4.0"
idna = "==2.7"
joblib = "^0.16.0"
messytables = "==0.15.*"
pipelinewise-singer-python = "==1.*"
pre-commit = "==1.21.0"
psutil = "==5.7.2"
psycopg2-binary = "==2.8.5"
pymongo = "==3.10.*"
pymysql = "==1.0.2"
python-dateutil = "<2.8.1"
python-pidfile = "==3.0.0"
pyyaml = "==5.1.0"
singer-encodings = "==0.0.*"
slackclient = "==2.7.*"
tabulate = "==0.8.2"
tzlocal = "==2.0.*"
ujson = "==2.0.*"
snowflake-connector-python = {version = "2.4.6", extras = ["pandas"]}

[tool.poetry.dev-dependencies]
coverage = {version = "==4.5.3", optional = true}
mock = {version = "==3.0.5", optional = true}
pylint = {version = "==2.4.4", optional = true}
pytest = {version = "==5.0.1", optional = true}
pytest-dependency = {version = "==0.4.0", optional = true}
python-dotenv = {version = "==0.10.3", optional = true}
unify = {version = "==0.5", optional = true}

[tool.poetry.extras]
test = ["coverage", "mock", "pylint", "pytest", "pytest-dependency", "python-dotenv", "unify"]

[tool.poetry.scripts]
pipelinewise = "pipelinewise.cli:main"
mysql-to-snowflake = "pipelinewise.fastsync.mysql_to_snowflake:main"
postgres-to-snowflake = "pipelinewise.fastsync.postgres_to_snowflake:main"
mysql-to-redshift = "pipelinewise.fastsync.mysql_to_redshift:main"
postgres-to-redshift = "pipelinewise.fastsync.postgres_to_redshift:main"
mysql-to-postgres = "pipelinewise.fastsync.mysql_to_postgres:main"
postgres-to-postgres = "pipelinewise.fastsync.postgres_to_postgres:main"
s3-csv-to-snowflake = "pipelinewise.fastsync.s3_csv_to_snowflake:main"
s3-csv-to-postgres = "pipelinewise.fastsync.s3_csv_to_postgres:main"
s3-csv-to-redshift = "pipelinewise.fastsync.s3_csv_to_redshift:main"
mongodb-to-snowflake = "pipelinewise.fastsync.mongodb_to_snowflake:main"
mongodb-to-postgres = "pipelinewise.fastsync.mongodb_to_postgres:main"
